--- a/pages/subpages/mine/merchant/subpages/scenic-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/scenic-order/subpages/order-detail/index.wxml
@@ -5,8 +5,15 @@
   <view class="card">
     <ticket-item ticketInfo="{{orderInfo.ticketInfo || null}}" />
     <view class="list row between">
-      <view class="title">商品总价</view>
-      <price-unit price="{{orderInfo.goodsPrice || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
+      <view class="title">门票总价</view>
+      <price-unit price="{{orderInfo.totalPrice || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
+    </view>
+    <view class="list row between" wx:if="{{orderInfo.deductionBalance}}">
+      <view class="title">余额抵扣</view>
+      <view class="row">
+        <text>-</text>
+        <price-unit price="{{orderInfo.deductionBalance || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
+      </view>
     </view>
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
@@ -21,10 +28,6 @@
           <text style="color: #169dfe" bindtap="copyOrderSn">复制</text>
         </view>
       </view>
-      <view class="list row between">
-        <view class="title">创建时间：</view>
-        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
-      </view>
       <view class="list row between" wx:if="{{orderInfo.payTime}}">
         <view class="title">付款时间：</view>
         <text>{{TIME.transform(orderInfo.payTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
@@ -33,11 +36,17 @@
         <view class="title">成交时间：</view>
         <text>{{TIME.transform(orderInfo.confirmTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
+      <view class="list row between">
+        <view class="title">创建时间：</view>
+        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
+      </view>
     </view>
   </view>
 </view>
 
 <view class="bottom-bar">
+  <button class="btn" wx:if="{{orderInfo.status === 201}}" bindtap="contact">取消订单</button>
+  <button class="btn active" wx:if="{{orderInfo.status === 201}}" bindtap="contact">确认订单</button>
   <button class="btn active" bindtap="contact">联系客户</button>
 </view>
   
