--- a/pages/subpages/mine/order/components/scenic-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/scenic-order-item/index.wxml
@@ -43,6 +43,14 @@
         申请退款
       </button>
       <button 
+        class="btn active" 
+        wx:if="{{item.status === 301}}" 
+        catchtap="checkQrCode"
+        hover-class="none"
+      >
+        查看券码
+      </button>
+      <button 
         class="btn" 
         wx:if="{{item.status === 102 || item.status === 103 || item.status === 104}}" 
         catchtap="deleteOrder"
