--- a/pages/subpages/mine/merchant/subpages/scenic-order/components/order-item/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/scenic-order/components/order-item/index.wxml
@@ -17,7 +17,9 @@
       <price-unit price="{{item.paymentAmount || 0}}" color="#333" fontSize="26rpx" integerFontSize="36rpx" />
     </view>
     <view class="btn-wrap">
-      <button class="btn" catchtap="navToDetail">查看详情</button>
+      <button class="btn" wx:if="{{item.status === 201}}" catchtap="refundOrder" hover-class="none">取消订单</button>
+      <button class="btn active" wx:if="{{item.status === 201}}" catchtap="approveOrder" hover-class="none">确认订单</button>
+      <button class="btn" catchtap="navToDetail" hover-class="none">查看详情</button>
     </view>
   </view>
 </view>
