feat: 景点门票订单

--- a/pages/subpages/mine/components/ticket-item/index.wxml
+++ b/pages/subpages/mine/components/ticket-item/index.wxml
@@ -1,6 +1,22 @@
 <view class="ticket">
   <view class="main-info">
-    <view class="ticket-name">{{ticketInfo.name}} {{ticketInfo.categoryName}}</view>
+    <view class="ticket-name">
+      {{ticketInfo.name}} {{ticketInfo.categoryName}}
+    </view>
+    <view class="scenic-list">
+      <view class="scenic-item row" wx:for="{{ticketInfo.scenicList}}" wx:key="index">
+        <image class="scenic-cover" src="{{item.cover}}" mode="aspectFill" />
+        <view class="scenic-name omit single">{{item.name}}</view>
+        <view 
+          class="qr-code-btn" 
+          wx:if="{{status === 301}}" 
+          catchtap="checkQRcode"
+          data-id="{{item.id}}"
+        >
+          查看券码
+        </view>
+      </view>
+    </view>
     <view class="row between">
       <price-unit price="{{ticketInfo.price || 0}}" />
       <view class="count-wrap">
@@ -21,11 +37,15 @@
     </view>
     <view class="tips-wrap row">
       <image class="tips-icon" src="./images/time.png" />
-      <view class="tips">{{ticketInfo.effectiveTime ? ('出票' + ticketInfo.effectiveTime + '小时后可用') : '出票后立即可用'}}</view>
+      <view class="tips">
+        {{ticketInfo.effectiveTime ? ('出票' + ticketInfo.effectiveTime + '小时后可用') : '出票后立即可用'}}
+      </view>
     </view>
-    <view class="tips-wrap row" bindtap="showNoticePopup">
+    <view class="tips-wrap row">
       <image class="tips-icon" src="./images/tips.png" />
-      <view class="tips stress">{{['随时可退', '有条件退', '不可退'][ticketInfo.refundStatus - 1]}}</view>
+      <view class="tips stress">
+        {{['随时可退', '有条件退', '不可退'][ticketInfo.refundStatus - 1]}}
+      </view>
       <view class="tips" wx:if="{{!ticketInfo.needExchange}}">无需换票</view>
     </view>
   </view>
