--- a/pages/subpages/mine/order/components/scenic-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/scenic-order-item/index.wxml
@@ -11,7 +11,11 @@
     <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
   </view>
   <view class="list-content">
-    <ticket-item ticketInfo="{{item.ticketInfo || null}}" />
+    <ticket-item 
+      status="{{item.status || 0}}" 
+      ticketInfo="{{item.ticketInfo || null}}" 
+      bind:checkQRcode="checkQRcode"
+    />
   </view>
   <view class="countdown-wrap" wx:if="{{item.status === 101}}">
     <image class="alarm-icon" src="/images/alarm.png" />
@@ -43,14 +47,6 @@
         申请退款
       </button>
       <button 
-        class="btn active" 
-        wx:if="{{item.status === 301}}" 
-        catchtap="checkQrCode"
-        hover-class="none"
-      >
-        查看券码
-      </button>
-      <button 
         class="btn" 
         wx:if="{{item.status === 102 || item.status === 103 || item.status === 104}}" 
         catchtap="deleteOrder"
@@ -68,7 +64,7 @@
       </button>
       <button 
         class="btn active" 
-        wx:if="{{item.status === 301 || item.status === 302}}" 
+        wx:if="{{item.status === 401 || item.status === 402 || item.status === 403}}" 
         catchtap="navToEvaluation"
         hover-class="none"
       >
