--- a/pages/subpages/mine/components/ticket-item/index.wxss
+++ b/pages/subpages/mine/components/ticket-item/index.wxss
@@ -14,6 +14,55 @@
   font-size: 32rpx;
   font-weight: bold;
 }
+
+.scenic-list {
+  position: relative;
+  margin-top: 18rpx;
+  margin-bottom: 24rpx;
+  padding: 0 18rpx;
+  border-radius: 18rpx;
+  background: #f5f6f8;
+}
+.scenic-list::before {
+  position: absolute;
+  top: -12rpx;
+  left: 24rpx;
+  width: 0;
+  height: 0;
+  content: "";
+  border-left: 12rpx solid transparent;
+  border-right: 12rpx solid transparent;
+  border-bottom: 12rpx solid #f5f6f8;
+}
+.scenic-item {
+  padding: 18rpx 0;
+  border-bottom: 1px solid #eee;
+}
+.scenic-item:last-child {
+  border-bottom: none;
+}
+.scenic-cover {
+  width: 50rpx;
+  height: 50rpx;
+  border-radius: 12rpx;
+}
+.scenic-name {
+  margin-left: 18rpx;
+  flex: 1;
+  color: #333;
+  font-size: 26rpx;
+  font-weight: bold;
+}
+.qr-code-btn {
+  padding: 0 24rpx;
+  height: 50rpx;
+  color: #fff;
+  font-size: 22rpx;
+  line-height: 50rpx;
+  background: var(--blue-1);
+  border-radius: 12rpx;
+}
+
 .count-wrap {
   font-size: 24rpx;
   color: var(--blue-1);
