--- a/pages/subpages/mine/order/index.wxml
+++ b/pages/subpages/mine/order/index.wxml
@@ -38,7 +38,7 @@
         item="{{item}}" 
         index="{{index}}" 
         bind:update="init"
-        bind:checkQrCode="showScenicQrCodeModal"
+        bind:checkQRcode="showQRcodeModal"
       />
     </view>
     <view class="no-more-tips" wx:if="{{scenicFinished && scenicOrderList.length}}">～没有更多啦～</view>
@@ -53,7 +53,7 @@
         item="{{item}}" 
         index="{{index}}" 
         bind:update="init"
-        bind:checkQrCode="showHotelQrCodeModal"
+        bind:checkQRcode="showQRcodeModal"
       />
     </view>
     <view class="no-more-tips" wx:if="{{hotelFinished && hotelOrderList.length}}">～没有更多啦～</view>
@@ -80,7 +80,7 @@
         item="{{item}}" 
         index="{{index}}" 
         bind:update="init"
-        bind:checkQrCode="showGoodsQrCodeModal"
+        bind:checkQRcode="showQRcodeModal"
       />
     </view>
     <empty-illus wx:if="{{goodsFinished && !goodsOrderList.length}}" desc="暂无商品订单" />
@@ -88,8 +88,8 @@
   </view>
 </view>
 
-<goods-qr-code-modal 
-  wx:if="{{goodsQrCodeModalVisible}}"
-  code="{{goodsVerifyCode}}" 
-  bind:hide="hideGoodsQrCodeModal"
+<qr-code-modal 
+  wx:if="{{qRcodeModalVisible}}"
+  code="{{verifyCode}}" 
+  bind:hide="hideQRcodeModal"
 />
