--- a/utils/filters/string.wxs
+++ b/utils/filters/string.wxs
@@ -9,20 +9,25 @@ function trim(string) {
   return string.split(" ").join("");
 }
 
-function nicknameFilter(string) {
-  if (string.length === 1) {
+function nicknameFilter(nickname) {
+  if (nickname.length === 1) {
     return "*";
-  } else if (string.length === 2) {
-    return string.slice(0, 1) + "*";
-  } else if (string.length === 3) {
-    return string.slice(0, 1) + "*" + string.slice(-1);
+  } else if (nickname.length === 2) {
+    return nickname.slice(0, 1) + "*";
+  } else if (nickname.length === 3) {
+    return nickname.slice(0, 1) + "*" + nickname.slice(-1);
   } else {
-    return string.slice(0, 1) + "**" + string.slice(-1);
+    return nickname.slice(0, 1) + "**" + nickname.slice(-1);
   }
+}
+
+function codeFilter(code) {
+  return code.slice(0, 4) + " " + code.slice(4, 8) + " " + code.slice(8, 12);
 }
 
 module.exports = {
   slice: slice,
   trim: trim,
-  nicknameFilter: nicknameFilter
+  nicknameFilter: nicknameFilter,
+  codeFilter: codeFilter
 };
