--- a/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxml
@@ -51,9 +51,6 @@
   <button class="btn" wx:if="{{orderInfo.status === 101}}" bindtap="cancelOrder" data-id="{{orderInfo.id}}" data-index="{{index}}">
     取消订单
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 201}}" bindtap="confirmOrder" data-id="{{orderInfo.id}}" data-index="{{index}}">
-    确认出行
-  </button>
   <button class="btn active" wx:if="{{orderInfo.status === 101}}" bindtap="payOrder" data-id="{{orderInfo.id}}" data-index="{{index}}">
     继续付款
   </button>
@@ -66,5 +63,5 @@
   <button class="btn active" wx:if="{{orderInfo.status === 301 || orderInfo.status === 302}}" bindtap="navToAfterSale" data-id="{{orderInfo.id}}">
     申请售后
   </button>
-  <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系卖家' : '联系客服'}}</button>
+  <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系商家' : '联系客服'}}</button>
 </view>
