--- a/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxss
+++ b/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxss
@@ -157,23 +157,22 @@
 }
 
 .countdown-wrap {
-  display: flex;
-  align-items: center;
-  padding: 0 20rpx;
-  height: 60rpx;
+  padding-left: 16rpx;
+  padding-right: 8rpx;
+  height: 50rpx;
   color: #666;
   font-size: 22rpx;
   background: #f5f6f8;
-  border-radius: 8rpx;
+  border-radius: 25rpx;
 }
 .alarm-icon {
   margin-right: 6rpx;
-  width: 32rpx;
-  height: 32rpx;
+  width: 28rpx;
+  height: 28rpx;
 }
 .countdown {
   margin-left: 6rpx;
-  width: 92rpx;
+  width: 93rpx;
   color: var(--blue-1);
 }
 
