--- a/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxss
+++ b/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxss
@@ -24,6 +24,26 @@
   font-weight: 500;
 }
 
+.countdown-wrap {
+  padding-left: 16rpx;
+  padding-right: 8rpx;
+  height: 50rpx;
+  color: #666;
+  font-size: 22rpx;
+  background: #f5f6f8;
+  border-radius: 25rpx;
+}
+.alarm-icon {
+  margin-right: 6rpx;
+  width: 28rpx;
+  height: 28rpx;
+}
+.countdown {
+  margin-left: 6rpx;
+  width: 93rpx;
+  color: var(--blue-1);
+}
+
 .list {
   margin-top: 24rpx;
   color: #999;
