--- a/pages/subpages/mine/order/components/goods-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/goods-order-item/index.wxml
@@ -9,17 +9,17 @@
       <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
     </view>
     <view class="shop-name omit single" wx:if="{{!item.shopId}}">官方自营</view>
-    <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
+    <view class="row">
+      <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
+      <view class="countdown-wrap row" wx:if="{{item.status === 101}}">
+        <image class="alarm-icon" src="/images/alarm.png" />
+        <view>剩余</view>
+        <view class="countdown">{{TIME.countdown(countdown, 'hh:mm:ss')}}</view>
+      </view>
+    </view>
   </view>
   <view class="list-content">
     <goods-list list="{{item.goodsList || []}}" />
-  </view>
-  <view class="countdown-wrap" wx:if="{{item.status === 101}}">
-    <image class="alarm-icon" src="/images/alarm.png" />
-    <view class="countdown">
-      <text style="color: #666;">剩余 </text>
-      <text>{{TIME.countdown(countdown, 'hh:mm:ss')}}</text>
-    </view>
   </view>
   <view class="list-footer">
     <view class="total-info row baseline">
