--- a/pages/subpages/mine/order/components/scenic-order-item/index.wxss
+++ b/pages/subpages/mine/order/components/scenic-order-item/index.wxss
@@ -23,27 +23,29 @@
   color: var(--blue-1);
 }
 
-.list-content {
-  margin: 24rpx 0;
-}
-
 .countdown-wrap {
-  display: flex;
-  align-items: center;
-  margin-bottom: 24rpx;
-  padding: 0 24rpx;
-  height: 60rpx;
+  margin-left: 18rpx;
+  padding-left: 16rpx;
+  padding-right: 8rpx;
+  height: 50rpx;
+  color: #666;
+  font-size: 22rpx;
   background: #f5f6f8;
-  border-radius: 8rpx;
+  border-radius: 25rpx;
 }
 .alarm-icon {
-  width: 32rpx;
-  height: 32rpx;
+  margin-right: 6rpx;
+  width: 28rpx;
+  height: 28rpx;
 }
 .countdown {
-  margin-left: 12rpx;
+  margin-left: 6rpx;
+  width: 93rpx;
   color: var(--blue-1);
-  font-size: 22rpx;
+}
+
+.list-content {
+  margin: 24rpx 0;
 }
 
 .total-info {
