--- a/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
@@ -66,9 +66,9 @@
         <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
       </view>
       <view class="shop-name omit single" wx:if="{{!orderInfo.shopId}}">官方自营</view>
-      <view class="countdown-wrap" wx:if="{{orderInfo.status === 101}}">
-        <image class="alarm-icon" src="./images/alarm.png" />
-        <view style="color: #666;">剩余 </view>
+      <view class="countdown-wrap row" wx:if="{{orderInfo.status === 101}}">
+        <image class="alarm-icon" src="/images/alarm.png" />
+        <view>剩余</view>
         <view class="countdown">{{TIME.countdown(countdown, 'hh:mm:ss')}}</view>
       </view>
     </view>
@@ -105,10 +105,6 @@
           <text style="color: #333" bindtap="copyOrderSn">复制</text>
         </view>
       </view>
-      <view class="list row between">
-        <view class="title">创建时间：</view>
-        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
-      </view>
       <view class="list row between" wx:if="{{orderInfo.payTime}}">
         <view class="title">付款时间：</view>
         <text>{{TIME.transform(orderInfo.payTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
@@ -124,6 +120,10 @@
       <view class="list row between" wx:if="{{orderInfo.refundTime}}">
         <view class="title">退款时间：</view>
         <text>{{TIME.transform(orderInfo.refundTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
+      </view>
+      <view class="list row between">
+        <view class="title">创建时间：</view>
+        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
     </view>
   </view>
