--- a/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxml
@@ -3,15 +3,23 @@
 
 <view class="container">
   <view class="card">
-    <view class="card-header row">
+    <view class="card-header row between">
       <view class="shop-info row" wx:if="{{orderInfo.shopId}}" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
         <image class="shop-logo" wx:if="{{orderInfo.shopLogo}}" src="{{orderInfo.shopLogo}}" />
         <view class="shop-name omit single">{{orderInfo.shopName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
       </view>
-      <view class="shop-name omit single" wx:if="{{!orderInfo.shopId}}">官方自营</view>
+      <view class="countdown-wrap row" wx:if="{{orderInfo.status === 101}}">
+        <image class="alarm-icon" src="/images/alarm.png" />
+        <view>剩余</view>
+        <view class="countdown">{{TIME.countdown(countdown, 'hh:mm:ss')}}</view>
+      </view>
     </view>
-    <ticket-item ticketInfo="{{orderInfo.ticketInfo || null}}" />
+    <ticket-item 
+      status="{{orderInfo.status || 0}}" 
+      ticketInfo="{{orderInfo.ticketInfo || null}}" 
+      bind:checkQrCode="showQRcodeModal"
+    />
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
       <price-unit price="{{orderInfo.paymentAmount || 0}}" />
@@ -29,10 +37,6 @@
           <text style="color: #333" bindtap="copyOrderSn">复制</text>
         </view>
       </view>
-      <view class="list row between">
-        <view class="title">创建时间：</view>
-        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
-      </view>
       <view class="list row between" wx:if="{{orderInfo.payTime}}">
         <view class="title">付款时间：</view>
         <text>{{TIME.transform(orderInfo.payTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
@@ -41,27 +45,38 @@
         <view class="title">成交时间：</view>
         <text>{{TIME.transform(orderInfo.confirmTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
+       <view class="list row between">
+        <view class="title">创建时间：</view>
+        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
+      </view>
     </view>
   </view>
 </view>
 <view class="bottom-bar">
-  <button class="btn" wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104 || orderInfo.status === 301 || orderInfo.status === 302}}" bindtap="deleteOrder" data-id="{{orderInfo.id}}" data-index="{{index}}">
+  <button class="btn" wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104}}" bindtap="deleteOrder" data-id="{{orderInfo.id}}" data-index="{{index}}" hover-class="none">
     删除订单
   </button>
-  <button class="btn" wx:if="{{orderInfo.status === 101}}" bindtap="cancelOrder" data-id="{{orderInfo.id}}" data-index="{{index}}">
+  <button class="btn" wx:if="{{orderInfo.status === 101}}" bindtap="cancelOrder" data-id="{{orderInfo.id}}" data-index="{{index}}" hover-class="none">
     取消订单
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 101}}" bindtap="payOrder" data-id="{{orderInfo.id}}" data-index="{{index}}">
+  <button class="btn active" wx:if="{{orderInfo.status === 101}}" bindtap="payOrder" data-id="{{orderInfo.id}}" data-index="{{index}}" hover-class="none">
     继续付款
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 201}}" bindtap="refundOrder" data-id="{{orderInfo.id}}" data-index="{{index}}">
+  <button class="btn active" wx:if="{{orderInfo.status === 201}}" bindtap="refundOrder" data-id="{{orderInfo.id}}" data-index="{{index}}" hover-class="none">
     申请退款
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 301 || orderInfo.status === 302}}" bindtap="navToEvaluation">
+  <button class="btn active" wx:if="{{orderInfo.status === 401 || orderInfo.status === 402 || orderInfo.status === 403}}" bindtap="navToEvaluation" hover-class="none">
     评价
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 301 || orderInfo.status === 302}}" bindtap="navToAfterSale" data-id="{{orderInfo.id}}">
+  <button class="btn active" wx:if="{{orderInfo.status === 401 || orderInfo.status === 402 || orderInfo.status === 403}}" bindtap="navToAfterSale" data-id="{{orderInfo.id}}" hover-class="none">
     申请售后
   </button>
-  <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系商家' : '联系客服'}}</button>
+  <button class="btn active" bindtap="contact" hover-class="none">{{orderInfo.shopId ? '联系商家' : '联系客服'}}</button>
 </view>
+
+<qr-code-modal 
+  wx:if="{{qRcodeModalVisible}}"
+  code="{{verifyCode}}" 
+  bind:hide="hideQRcodeModal"
+/>
+
