feat: 景点门票订单

--- a/pages/subpages/mine/merchant/subpages/scenic-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/scenic-order/subpages/order-detail/index.wxml
@@ -20,6 +20,12 @@
       <price-unit price="{{orderInfo.paymentAmount || 0}}" />
     </view>
     <view class="more-info-wrap">
+      <view class="list row top">
+        <view class="title">游客信息：</view>
+        <view class="content">
+          {{orderInfo.consignee}}｜{{orderInfo.mobile}}｜{{orderInfo.idCardNumber}}
+        </view>
+      </view>
       <view class="list row between">
         <view class="title">订单编号：</view>
         <view>
