--- a/pages/subpages/mine/merchant/subpages/income-detail/index.wxss
+++ b/pages/subpages/mine/merchant/subpages/income-detail/index.wxss
@@ -140,6 +140,7 @@
 .order-info {
   display: flex;
   align-items: center;
+  margin-bottom: 24rpx;
   padding: 24rpx;
   background: #f8f8f8;
   border-radius: 16rpx;
@@ -184,10 +185,10 @@
   border: 1px solid #A1A9B3;
   border-radius: 8rpx;
 }
+
 .goods-info-wrap {
   display: flex;
   align-items: center;
-  margin-top: 24rpx;
 }
 .goods-cover {
   width: 150rpx;
