feat: 景点代言奖励

--- a/pages/subpages/mine/promoter/subpages/account/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/account/index.wxml
@@ -118,7 +118,8 @@
           <view class="order-type">{{item.scene === 1 ? "自购" : "分享"}}</view>
         </view>
       </view>
-      <view class="goods-list">
+      <ticket-item wx:if="{{item.productType === 1}}" ticketInfo="{{item.productList[0]}}" />
+      <view class="goods-list" wx:if="{{item.productType === 4}}">
         <view class="goods-info-wrap" wx:for="{{item.productList}}" wx:key="id" wx:for-item="goods">
           <image class="goods-cover" src="{{goods.cover}}" />
           <view class="goods-info">
