--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -1,6 +1,10 @@
+<import src="index.skeleton.wxml"/>
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 
 <page-meta page-style="{{ noticePopupVisible ? 'overflow: hidden;' : '' }}" />
+
+<template is="skeleton" wx:if="{{!pageLoaded}}" />
+
 <view class="nav-bar-wrap">
   <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
     <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{hotelInfo.cover}}" mode="aspectFill" />
@@ -25,7 +29,7 @@
 </view>
 
 <view class="banner-wrap">
-  <swiper style="height: 580rpx;" current="{{ curDot - 1 }}" circular bindchange="bannerChange">
+  <swiper style="height: 580rpx;" wx:if="{{pageLoaded}}" current="{{ curDot - 1 }}" circular bindchange="bannerChange">
     <swiper-item 
       wx:if="{{hotelInfo.video}}"
       bindtap="previewMedia" 
@@ -70,7 +74,7 @@
   </view>
 </view>
 
-<view class="container">
+<view class="container" wx:if="{{pageLoaded}}">
   <view class="content-wrap">
     <view class="row between">
       <view class="row">
