--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.skeleton.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.skeleton.wxml
@@ -2,7 +2,7 @@
   <view class="sk-container">
     <view class="banner-wrap">
       <swiper circular="true" current="0" style="height: 332px;" autoplay="false">
-        <swiper-item data-current="0" style="position: absolute; width: 100%; height: 100%; transform: translate(0%, 0px) translateZ(0px);">
+        <swiper-item data-current="0">
           <image lazy-load="true" mode="aspectFill" style="width:100%; height:100%;" class="sk-image"></image>
         </swiper-item>
       </swiper>
@@ -47,8 +47,8 @@
         <view class="van-index-bar bar-index--van-index-bar">
           <view>
             <view is="miniprogram_npm/@vant/weapp/index-anchor/index" class="condition-picker-wrap-index-anchor">
-              <view class="van-index-anchor-wrapper anchor-index--van-index-anchor-wrapper" style="true">
-                <view class="van-index-anchor anchor-index--van-index-anchor" style="true">
+              <view class="van-index-anchor-wrapper anchor-index--van-index-anchor-wrapper">
+                <view class="van-index-anchor anchor-index--van-index-anchor">
                   <view class="condition-picker-wrap row center">
                     <view class="condition-picker row between">
                       <view class="date-picker-wrap row">
