--- a/pages/subpages/mine/order/subpages/hotel-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/hotel-order/order-detail/index.wxml
@@ -3,13 +3,17 @@
 
 <view class="container">
   <view class="card">
-    <view class="card-header row">
-      <view class="shop-info row" wx:if="{{orderInfo.shopId}}" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
+    <view class="card-header row between">
+      <view class="shop-info row" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
         <image class="shop-logo" wx:if="{{orderInfo.shopLogo}}" src="{{orderInfo.shopLogo}}" />
         <view class="shop-name omit single">{{orderInfo.shopName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
       </view>
-      <view class="shop-name omit single" wx:if="{{!orderInfo.shopId}}">官方自营</view>
+      <view class="countdown-wrap row" wx:if="{{orderInfo.status === 101}}">
+        <image class="alarm-icon" src="/images/alarm.png" />
+        <view>剩余</view>
+        <view class="countdown">{{TIME.countdown(countdown, 'hh:mm:ss')}}</view>
+      </view>
     </view>
     <room-item info="{{orderInfo.roomInfo}}" />
     <view class="list row between">
@@ -18,7 +22,7 @@
     </view>
     <view class="more-info-wrap">
       <view class="list row top">
-        <view class="title">宾客信息：</view>
+        <view class="title">房客信息：</view>
         <view class="content">{{orderInfo.consignee}}，{{orderInfo.mobile}}</view>
       </view>
       <view class="list row between">
@@ -29,10 +33,6 @@
           <text style="color: #333" bindtap="copyOrderSn">复制</text>
         </view>
       </view>
-      <view class="list row between">
-        <view class="title">创建时间：</view>
-        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
-      </view>
       <view class="list row between" wx:if="{{orderInfo.payTime}}">
         <view class="title">付款时间：</view>
         <text>{{TIME.transform(orderInfo.payTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
@@ -41,6 +41,10 @@
         <view class="title">成交时间：</view>
         <text>{{TIME.transform(orderInfo.confirmTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
+      <view class="list row between">
+        <view class="title">创建时间：</view>
+        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
+      </view>
     </view>
   </view>
 </view>
@@ -48,34 +52,65 @@
 <view class="bottom-bar">
   <button 
     class="btn" 
-    wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104 || orderInfo.status === 401 || orderInfo.status === 402}}" 
-    bindtap="deleteOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
-  >删除订单</button>
+    wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104}}" 
+    bindtap="deleteOrder"
+    hover-class="none"
+  >
+    删除订单
+  </button>
   <button 
     class="btn" 
     wx:if="{{orderInfo.status === 101}}" 
-    bindtap="cancelOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
-  >取消订单</button>
+    bindtap="cancelOrder"
+    hover-class="none"
+  >
+    取消订单
+  </button>
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 101}}" 
-    bindtap="payOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
-  >继续付款</button>
+    bindtap="payOrder"
+    hover-class="none"
+  >
+    继续付款
+  </button>
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 201 || (orderInfo.status === 301 && orderInfo.roomInfo.cancellable)}}"
-    bindtap="refundOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
-  >申请退款</button>
+    bindtap="refundOrder"
+    hover-class="none"
+  >
+    申请退款
+  </button>
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 301}}" 
-    catchtap="confirmOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
-  >确认入住</button>
+    bindtap="showQRcodeModal" 
+    hover-class="none"
+  >
+    查看券码
+  </button>
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 401 || orderInfo.status === 402}}" 
-    bindtap="navToEvaluation" data-id="{{orderInfo.id}}"
-  >评价</button>
-  <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系商家' : '联系客服'}}</button>
+    bindtap="navToEvaluation"
+    hover-class="none"
+  >
+    评价
+  </button>
+  <button 
+    class="btn active" 
+    bindtap="contact"
+    hover-class="none"
+  >
+    联系商家
+  </button>
 </view>
+
+
+<qr-code-modal 
+  wx:if="{{qRcodeModalVisible}}"
+  code="{{verifyCode}}" 
+  bind:hide="hideQRcodeModal"
+/>
   
