--- a/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxml
@@ -4,7 +4,7 @@
 <view class="container">
   <view class="card">
     <view class="card-header row between">
-      <view class="shop-info row" wx:if="{{orderInfo.shopId}}" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
+      <view class="shop-info row" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
         <image class="shop-logo" wx:if="{{orderInfo.shopLogo}}" src="{{orderInfo.shopLogo}}" />
         <view class="shop-name omit single">{{orderInfo.shopName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
@@ -57,25 +57,53 @@
   </view>
 </view>
 <view class="bottom-bar" wx:if="{{userInfo.id === orderInfo.userId}}">
-  <button class="btn" wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104}}" bindtap="deleteOrder" data-id="{{orderInfo.id}}" data-index="{{index}}" hover-class="none">
+  <button 
+    class="btn" 
+    wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104}}" 
+    bindtap="deleteOrder"
+    hover-class="none"
+  >
     删除订单
   </button>
-  <button class="btn" wx:if="{{orderInfo.status === 101}}" bindtap="cancelOrder" data-id="{{orderInfo.id}}" data-index="{{index}}" hover-class="none">
+  <button 
+    class="btn" 
+    wx:if="{{orderInfo.status === 101}}" 
+    bindtap="cancelOrder"
+    hover-class="none"
+  >
     取消订单
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 101}}" bindtap="payOrder" data-id="{{orderInfo.id}}" data-index="{{index}}" hover-class="none">
+  <button 
+    class="btn active" 
+    wx:if="{{orderInfo.status === 101}}" 
+    bindtap="payOrder" 
+    hover-class="none"
+  >
     继续付款
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 201}}" bindtap="refundOrder" data-id="{{orderInfo.id}}" data-index="{{index}}" hover-class="none">
+  <button 
+    class="btn active" 
+    wx:if="{{refundBtnVisible}}" 
+    bindtap="refundOrder" 
+    hover-class="none"
+  >
     申请退款
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 401 || orderInfo.status === 402 || orderInfo.status === 403}}" bindtap="navToEvaluation" hover-class="none">
+  <button 
+    class="btn active" 
+    wx:if="{{orderInfo.status === 401 || orderInfo.status === 402 || orderInfo.status === 403}}" 
+    bindtap="navToEvaluation" 
+    hover-class="none"
+  >
     评价
   </button>
-  <button class="btn active" wx:if="{{orderInfo.status === 401 || orderInfo.status === 402 || orderInfo.status === 403}}" bindtap="navToAfterSale" data-id="{{orderInfo.id}}" hover-class="none">
-    申请售后
+  <button 
+    class="btn active" 
+    bindtap="contact" 
+    hover-class="none"
+  >
+    联系商家
   </button>
-  <button class="btn active" bindtap="contact" hover-class="none">{{orderInfo.shopId ? '联系商家' : '联系客服'}}</button>
 </view>
 
 <qr-code-modal 
